Fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ a:hover {
 }
 
 
-body {
+/* body {
   margin: 0;
   min-height: 100vh;
 
@@ -95,6 +95,62 @@ body {
   background-attachment: scroll, scroll;
 
   background-blend-mode: multiply;
+} */
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  position: relative;
+
+  background:
+    linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0.5)),
+    linear-gradient(
+      to right,
+      #1c1357,
+      #271b7b,
+      #271b7b,
+      #271b7b,
+      #1c1357
+    );
+  
+  z-index: 0;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+
+  z-index: -1;
+
+  background: url("./assets/glass-pattern.png") repeat-y top center;
+  background-size: 100vw auto;
+
+  mix-blend-mode: multiply;
+
+  mask-image: linear-gradient(
+    to right,
+    black 0%,
+    black 25%,
+    rgba(0,0,0,0.6) 40%,
+    transparent 50%,
+    rgba(0,0,0,0.6) 60%,
+    black 75%,
+    black 100%
+  );
+
+
+  -webkit-mask-image: linear-gradient(
+    to right,
+    black 0%,
+    black 25%,
+    rgba(0,0,0,0.6) 30%,
+    transparent 50%,
+    rgba(0,0,0,0.6) 70%,
+    black 75%,
+    black 100%
+  );
 }
 
 h1 {
